# omegga-chunks

./: Cargo.toml  README.md  colliders.json  doc.json  omegga_plugin
src/: main.rs
