[package]
name = "omegga-chunks"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
brickadia = "0.1.26"
lazy_static = "1.4.0"
omegga = { version = "1.0.0", features = ["brs"] }
serde = "1.0"
serde_json = "1.0"
tokio = "1.10"
